# MyCobot

./: README.md
mycobot_bringup/scripts/: mycobot_280_gazebo.sh
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/launch/: robot_state_publisher.launch.py
mycobot_description/scripts/: simple_collision_detector.py  test_collision_movements.py
mycobot_description/urdf/mech/: adaptive_gripper.urdf.xacro
mycobot_description/urdf/robots/: mycobot_280.urdf.xacro
mycobot_gazebo/config/: ros_gz_bridge.yaml
mycobot_gazebo/launch/: mycobot.gazebo.launch.py  test_collision_movements_working.launch.py
mycobot_gazebo/models/ppo_target_marker/: model.config  model.sdf
mycobot_gazebo/worlds/: collision_test.world  custom.world  empty.world
mycobot_system_tests/scripts/: arm_gripper_loop_controller.py  cartesian_move.py  rl.py  simple_cartesian_move.py  trajectory.py
mycobot_system_tests/scripts/ppo/: README.md  analyze_mycobot_dimensions.py  check_reachability.py  example_usage.py  install_dependencies.sh  mycobot_sb3_env.py  test_ros_communication.py  train_mycobot_ppo.py
mycobot_system_tests/scripts/rl_logs/: training_log_20250721_201122.txt  training_log_20250721_202509.txt
new_ppo/: analisis_modelo.py  espacio_trabajo_mycobot.py  gazebo_marker_manager.py  graficas.py  launch_complete_training.py  marcador_rviz.py  myCobotEnv_improved_3d.py  train_3d.py  train_SAC_3d.py  train_TD3_3d.py  workspace_3d_points_20250902_162417.csv
new_ppo/comparacion_algoritmos/PPO_21-ppo comparacion/: events.out.tfevents.1756197732.migue-Ubuntu.11513.0
(+11 files in other folders)
